In Progress Website, Not working on mobile. Fixed spacing on illustrator design.

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,9 @@ ul li a{
 
 #main{
     
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     box-shadow: 0px 30px 50px #888888;
     width: 75%;
     height: auto;
@@ -80,14 +82,29 @@ ul li a{
 
 
 #container1{
+float:left;
     padding: 5%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 8%;
-    width:60%;   
+    display: flex;
+    flex-direction: column;
+    margin-top: 25%;
+    width:40%;   
 }
 
+#container2{
+
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    bottom:0;
+    right:0;
+}
+
+#iphone{
+    position: fixed;
+    bottom: 0;
+    right: 5%;
+    width: 60%;
+}
 .headings{
     margin-top: 75px;
     height: 6vmin;
@@ -108,7 +125,7 @@ ul li a{
     width:90%;
     color:333333;
     text-align: center;
-    font-size: 14px;
+    font-size: 20px;
     display: block;
     margin-left: auto;
     margin-right: auto;
